--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.3.7",
-    "puppeteer": "^1.9.0"
+    "npm": "^6.4.1",
+    "puppeteer": "^1.9.0",
+    "socket.io": "^2.1.1"
   }
 }
